switching to pg from mysql, adding gems required for heroku

--- a/productslist/Gemfile
+++ b/productslist/Gemfile
@@ -6,7 +6,9 @@ ruby '2.3.1'
 gem 'rails', '4.2'
 # Use sqlite3 as the database for Active Record
 # gem 'sqlite3'
-gem 'mysql2', '~> 0.3.18'
+# gem 'mysql2', '~> 0.3.18'
+
+gem 'pg'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.3'
 # Use Uglifier as compressor for JavaScript assets
@@ -40,3 +42,6 @@ gem 'spring',        group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
+gem 'rails_12factor', group: :production
+
+gem 'puma'
