updating database.yml

--- a/productslist/config/database.yml
+++ b/productslist/config/database.yml
@@ -10,6 +10,8 @@ default: &default
   pool: 5
   timeout: 5000
   # username: user # heroku config
+  # username: pguser
+  # password: root
 
 development:
   <<: *default
